--- a/main_app/templates/header.html
+++ b/main_app/templates/header.html
@@ -23,44 +23,38 @@
       rel="stylesheet"
     />
     <script src="{% static 'scripts/app.js' %}" defer></script>
-    <title>Wayfarer</title>
+    <title>Aquarist Forum</title>
   </head>
-  <body class="d-flex flex-column h-100">
-    <nav class="navbar navbar-dark bg-dark sticky-top">
-      <a class="navbar-brand" href="/">
-        <img
-          src="{% static 'images/WayfarerLogo4.png' %}"
-          width="30"
-          height="30"
-          class="d-inline-block align-top"
-          alt=""
-          loading="lazy"
-        />
-        <span>Wayfarer</span>
-      </a>
-      <div class="form-inline">
-        <a class="mr-3" href="{% url 'about' %}">About</a>
-        {% if user.is_authenticated %}
-        <a class="mr-3" href="/cities/">Cities</a>
-        <a class="mr-3" href="/posts/">Posts</a>
-        <a class="mr-3" href="/profile/">Profile</a>
-        <a class="mr-3" href="{% url 'logout' %}">Log Out</a>
-        {% else %}
-        <a class="mr-3" href="{% url 'signup' %}">Register</a>
-        <a class="mr-3" href="{% url 'login' %}">Login</a>
-        {% endif %}
-    </nav>
-    <main>
-      {% block content %}
-       {% endblock %}
-    </main>
-    <footer class="footer mt-auto py-3">
-      <div class="container mt-auto">
-      </div>
-    </footer>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <body>
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Aquarist Forum</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Register</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Dropdown link
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </li>
+          </ul>
+        </div>
+      </nav>
+ 
   </body>
 </html>
