user registration email verification added

--- a/main_app/templates/header.html
+++ b/main_app/templates/header.html
@@ -19,7 +19,7 @@
             </ul>
             <ul class="right">
                 <li><a href="/about">Login</a></li>
-                <li><a href="/about">Register</a></li>
+                <li><a href="/aqua_agora/signup">Register</a></li>
             </ul>
         </div>
     </nav>
