--- a/main_app/templates/header.html
+++ b/main_app/templates/header.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cat Collector</title>
+    <title>Aqua Agora</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 <body>
@@ -18,8 +18,10 @@
                 </li>
             </ul>
             <ul class="right">
-                <li><a href="/about">Login</a></li>
-                <li><a href="/aqua_agora/signup">Register</a></li>
+                <li><a href="/about">Profile</a></li>
+                <li><a href="/aqua_agora/accounts/logout">Logout</a></li>
+                <li><a href="/aqua_agora/accounts/login">Login</a></li>
+                <li><a href="/aqua_agora/signup">Signup</a></li>
             </ul>
         </div>
     </nav>
