adds admin models, profile view

--- a/main_app/templates/header.html
+++ b/main_app/templates/header.html
@@ -14,12 +14,12 @@
     <nav>
         <div class="nav-wrapper">
             <ul>
-                <li><a href="/" class="left brand-logo">&nbsp;&nbsp;Aqua Agora - The Fishkeeper's Forum</a>
+                <li><a href="/aqua_agora/" class="left brand-logo">&nbsp;&nbsp;Aqua Agora - The Fishkeeper's Forum</a>
                 </li>
             </ul>
             <ul class="right">
-                <li><a href="/about">Profile</a></li>
-                <li><a href="/aqua_agora/accounts/logout">Logout</a></li>
+                <li><a href="/aqua_agora/profile">Profile</a></li>
+                <li><a href="{ url 'logout'}">Logout</a></li>
                 <li><a href="/aqua_agora/accounts/login">Login</a></li>
                 <li><a href="/aqua_agora/signup">Signup</a></li>
             </ul>
@@ -31,7 +31,7 @@
     {% endblock %}
   </main>
   <footer class="page-footer">
-    <div class="right">All Rights Reserved, &copy; 2019 Cat Collector &nbsp;</div>
+    <div class="right">All Rights Reserved, &copy; 2020 Aqua Agora &nbsp;</div>
   </footer>
 </body>
 </html>
