--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,7 +1,8 @@
-{% extends 'header.html' %} {% load static %} {% block content %}
-<div >
-    this is a test
+{% extends 'base.html' %} {% load static %} {% block content %}
 
+
+<h3 class="pt-5 text-white text-center">THIS IS A TEST</h3>
+<div class="container bg-secondary">
 </div>
 
 {% endblock %}
