--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -1,6 +1,17 @@
-<h2>Log In</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Log In</button>
-</form>
+{% extends 'base.html' %} 
+{% load static %} 
+{% block content %}
+<div class="container mt-5">
+  <form class="form-signin" action="{% url 'login' %}" method="POST">
+    {% csrf_token %} 
+    <div class="text-center mb-4">
+      <img class="mb-4" src="{% static 'images/WayfarerLogo4.png' %}" alt="" width="72" height="72">
+      <h1 class="h3 mb-3 font-weight-normal">Please Login</h1>
+    </div>
+    {{form}}
+    <button type="submit" class="btn btn-danger" value="login" type="submit">Sign in</button>
+    <input type="hidden" name="next" value="{{ next }}" />
+  </form>
+</div>
+{% endblock %}
+
