--- a/main_app/templates/posts/detail.html
+++ b/main_app/templates/posts/detail.html
@@ -5,16 +5,13 @@
   <div class="card mb-3 mx-auto">
     <div class="row no-gutters">
       <div class="col-md-4">
-        <img src="{{ post.image }}" class="card-img-top img-fluid" alt="{{ post.title }}">
       </div>
       <div class="col-md-7">
-        <div class="card-header">
-           {{ post.city }} Nightlife
         </div>
         <div class="card-body">
           <h5 class="card-title">{{ post.title }}</h5>
           <p class="card-text">{{ post.content }}</p>
-          <small class="card-subtitle mb-2 text-muted">Author: {{ post.user.first_name }}{{ post.user.last_name}}</small><br>
+          <small class="card-subtitle mb-2 text-muted">Author: {{ post.user.username }}</small><br>
           <small class="card-subtitle text-muted">Created: {{ post.created_at }}</small>
        
         </div>
