--- a/main_app/templates/posts/index.html
+++ b/main_app/templates/posts/index.html
@@ -10,15 +10,13 @@
       <div class="card mb-3">
         <div class="row no-gutters">
           <div class="col-md-4">
-            <img src="{{ post.image }}" class="card-img" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
             <h5 class="card-title">{{ post.title }}</h5>
-            <h6 class="card-subtitle mb-2 text-muted">{{ post.city }}</h6>
               <p class="card-text" style="height:75px; overflow:hidden">{{ post.content }}</p>
               <p class="card-text">
-                <small class="text-muted">Author: {{ post.user.first_name }} {{ post.user.last_name }}</small> <span class="text-muted">|</span>
+                <small class="text-muted">Author: {{ post.user.username }} </small> <span class="text-muted">|</span>
                 <small class="text-muted">{{ post.created_at }}</small>
               </p>
               <a href="{% url 'posts_detail' post.id %}" class="btn btn-danger btn-sm">Read More</a>
