--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -41,10 +41,12 @@
       </a>
       <div class="form-inline">
         {% if user.is_authenticated %}
+        <a class="mr-3" href="/posts/">New Posts</a>
         <a class="mr-3" href="/topics/">Topics</a>
         <a class="mr-3" href="/profile/">Profile</a>
         <a class="mr-3" href="{% url 'logout' %}">Log Out</a>
         {% else %}
+        <a class="mr-3" href="/topics/">Topics</a>
         <a class="mr-3" href="{% url 'signup' %}">Register</a>
         <a class="mr-3" href="{% url 'login' %}">Login</a>
         {% endif %}
