--- a/main_app/templates/topics/index.html
+++ b/main_app/templates/topics/index.html
@@ -15,11 +15,12 @@
           </ul>
       </div>
       <div class="col-7">
-        <ul class="nav flex-column">
+        <ul class="nav flex-colum nav-pills">
           {% for post in posts  %}
-            <li class="nav-item text-white">
-              <a class="nav-link" href="/posts/{{ post.id }}">{{ post.title }}</a>
-              <small class="ml-3 text-muted">Author: {{ user.username }}</small>
+            <li class="nav-item grow" id="pillitem">
+                <div onclick="location.href='{{ topic.id }}';" class='row' id="citypill">
+                <a class="nav-link" href="/posts/{{ post.id }}">{{ post.title }}</a>
+                <small class="ml-3 text-muted">Author: {{ user.username }}</small>
               <p class="ml-3">{{ post.content }}</p>
             </li>
             {% endfor %}
