--- a/main_app/templates/image_upload.html
+++ b/main_app/templates/image_upload.html
@@ -8,3 +8,4 @@
     <h3>Succesfully uploaded : {{img_obj.title}}</h3>
     <img src="{{ img_obj.image.url}}" alt="connect" style="max-height:300px">
   {% endif %}
+  <a href="/tank_images/" class="button"><button class="pixel">Go to tank images</button></a>
