--- a/main_app/templates/profile/profile.html
+++ b/main_app/templates/profile/profile.html
@@ -4,12 +4,11 @@
 {% if user.is_authenticated %}
 <div class="container mt-5">
     <h4>Welcome </h4>
-    <div class='row bg-dark text-white pt-5 pb-5 px-2'>
+    <div class='row bg-dark text-black pt-5 pb-5 px-2'>
     <div class="col-3">
         <div class="card" style="width: 18rem;">
-            <img src="" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">{{ user.profile.name }}</h5>
+                <h5 class="card-title">{{ user.username }}</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Joined: {{ user.date_joined }}</h6>
             </div>
             <div class="card-footer">
@@ -26,33 +25,6 @@
                 
             </form>
             </div>
-        </div>
-    </div>
-    <div class="col ml-5">
-        <div class="row">
-            <p class="float-right"><span class="mr-2">Add a post </span>
-            <button type="button" class="btn btn-danger rounded-circle grow">
-                <a href="/posts/"> <i class="fas fa-chevron-right"></i></a>
-            </button>
-            </p>
-        </div>
-        <div class="row">
-        {% for post in posts %}
-            <div class="card mt-3">
-                <div class="row no-gutters">
-                    <div class="col-md-4">
-                    <img src="{{ post.image }}" class="card-img" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ post.title }}</h5>
-                        <p class="card-text"><small class="text-muted">{{ post.created_at }}</small></p>
-                        <a href="{% url 'posts_detail' post.id %}" class="btn btn-danger btn-sm">Read More</a>
-                    </div>
-                    </div>
-                </div>
-            </div>
-        {% endfor %}
         </div>
     </div>
     </div>
