--- a/main_app/templates/topics/detail.html
+++ b/main_app/templates/topics/detail.html
@@ -21,7 +21,7 @@
             <li class="nav-item text-white">
               <a class="nav-link" href="/posts/{{ post.id }}">{{ post.title }}</a>
               <small class="ml-3 text-muted">Author: {{ post.user.username }}</small>
-              <small class="ml-3 text-muted">Date: {{ post.post_date }}</small>
+              <small class="ml-3 text-muted">Date: {{ post.created_at }}</small>
               <p class="ml-3">{{ post.content }}</p>
             </li>
             {% endfor %}
