fixes authorization issues

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta
       name="Description"
-      content="Wayfarer - Experience the nightlife of the city"
+      content=""
     />
     <link
       rel="stylesheet"
@@ -23,7 +23,7 @@
       rel="stylesheet"
     />
     <script src="{% static 'scripts/app.js' %}" defer></script>
-    <title>Wayfarer</title>
+    <title>Aqua Agora</title>
   </head>
   <body class="d-flex flex-column h-100">
     <nav class="navbar navbar-dark bg-dark sticky-top">
