--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -26,30 +27,34 @@
     <title>Aqua Agora</title>
   </head>
   <body class="d-flex flex-column h-100">
-    <nav class="navbar navbar-dark bg-dark sticky-top">
-      <a class="navbar-brand" href="/">
-        <img
-          src=""
-          width="30"
-          height="30"
-          class="d-inline-block align-top"
-          alt=""
-          loading="lazy"
-        />
-        <span>Aqua Agora</span>
-        <span class='smallheadertitle'>The Fishkeeper's Forum</span>
-      </a>
-      <div class="form-inline">
-        {% if user.is_authenticated %}
-        <a class="mr-3" href="/tank_images/">Tank Pics</a>
-        <a class="mr-3" href="/topics/">Topics</a>
-        <a class="mr-3" href="/profile/">Profile</a>
-        <a class="mr-3" href="{% url 'logout' %}">Log Out</a>
-        {% else %}
-        <a class="mr-3" href="/topics/">Topics</a>
-        <a class="mr-3" href="{% url 'signup' %}">Register</a>
-        <a class="mr-3" href="{% url 'login' %}">Login</a>
-        {% endif %}
+    <nav class="navbar navbar-expand-lg py-3 navbar-dark bg-dark shadow-sm">
+      <div class="container">
+        <a href="/ " class="navbar-brand">
+          <!-- Logo Image -->
+          <img src="{% static 'images/aquaagoralogo.png' %}" width="40" alt="" class="d-inline-block align-middle mr-2">
+          <!-- Logo Text -->
+          <span class="text-uppercase font-weight-bold">Aqua Agora</span>
+          <span class='basemid'>The Fishkeeper's Forum</span>
+        </a>
+    
+        <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"><span class="navbar-toggler-icon"></span></button>
+    
+        <div id="navbarSupportedContent" class="collapse navbar-collapse">
+          <ul class="navbar-nav ml-auto">
+            {% if user.is_authenticated %}
+            <li class="nav-item"><a href="/topics/" class="nav-link">Topics</a></li>
+            <li class="nav-item"><a href="/tank_images/" class="nav-link">Tank Pics</a></li>
+            <li class="nav-item"><a href="/profile/" class="nav-link">Profile</a></li>
+            <li class="nav-item"><a href="{% url 'logout' %}" class="nav-link">Logout</a></li>
+            {% else %}
+            <li class="nav-item"><a href="/topics/" class="nav-link">Topics</a></li>
+            <li class="nav-item"><a href="/tank_images/" class="nav-link">Tank Pics</a></li>
+            <li class="nav-item"><a href="{% url 'signup' %}" class="nav-link">Register</a></li>
+            <li class="nav-item"><a href="{% url 'login' %}" class="nav-link">Login</a></li>
+            {% endif %}
+          </ul>
+        </div>
+      </div>
     </nav>
     <main>
       {% block content %}
