--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% load static %} {% block content %}
 
 
-<h3 class="pt-5 text-white text-center">THIS IS A TEST</h3>
+<h3 class="pt-5 text-black text-center">THIS IS A TEST</h3>
 <div class="container bg-secondary">
 </div>
 
