adds styling to header and home

--- a/main_app/static/styles/main.css
+++ b/main_app/static/styles/main.css
@@ -18,6 +18,52 @@ footer {
     text-align: flex;
   }
 
-  .basemid {
+.basemidhome {
     color: rgb(37, 183, 202) !important;
   }
+
+.video-background-holder {
+    position: relative;
+    background-color: black !important;
+    height: calc(100vh - 72px) !important;
+    min-height: 25rem !important;
+    width: 100% !important;
+    overflow: hidden !important;
+  }
+  
+.video-background-holder video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: 0;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+  }
+  
+.video-background-content {
+    position: relative;
+    z-index: 2;
+  }
+  
+.video-background-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: black;
+    opacity: 0.5;
+    z-index: 1;
+  }
+
+.navbar-dark {
+  background-color: rgb(3, 15, 71) !important;
+  }
+
+  
