--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -34,7 +34,7 @@
           <img src="{% static 'images/aquaagoralogo.png' %}" width="40" alt="" class="d-inline-block align-middle mr-2">
           <!-- Logo Text -->
           <span class="text-uppercase font-weight-bold">Aqua Agora</span>
-          <span class='basemid'>The Fishkeeper's Forum</span>
+          <span class='basemidhome' id='media'>The Fishkeeper's Forum</span>
         </a>
     
         <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"><span class="navbar-toggler-icon"></span></button>
@@ -60,10 +60,6 @@
       {% block content %}
        {% endblock %}
     </main>
-    <footer class="footer mt-auto py-3">
-      <div class="container mt-auto">
-      </div>
-    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
