adds styling to profile page

--- a/main_app/static/styles/main.css
+++ b/main_app/static/styles/main.css
@@ -66,4 +66,8 @@ footer {
   background-color: rgb(3, 15, 71) !important;
   }
 
+.bg-dark {
+  background-color: rgb(3, 15, 71) !important;
+}
+
   
