--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -27,7 +27,7 @@
     <title>Aqua Agora</title>
   </head>
   <body class="d-flex flex-column h-100">
-    <nav class="navbar navbar-expand-lg py-3 navbar-dark bg-dark shadow-sm">
+    <nav class="navbar navbar-expand-lg py-3 navbar-dark bg-dark shadow-sm sticky-top">
       <div class="container">
         <a href="/ " class="navbar-brand">
           <!-- Logo Image -->
@@ -60,7 +60,6 @@
       {% block content %}
        {% endblock %}
     </main>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
