--- a/main_app/templates/profile/profile.html
+++ b/main_app/templates/profile/profile.html
@@ -9,78 +9,50 @@
 
         <!-- Profile widget -->
         <div class="bg-white shadow rounded overflow-hidden">
-            <div class="px-4 pt-0 pb-4 bg-dark">
+            <div class="px-4 pt-0 pb-4 bg-dark"><br>
                 <div class="media align-items-end profile-header">
-                    <div class="profile mr-3"><a href="#" class="btn btn-dark btn-sm btn-block">Edit profile</a></div>
-                    <div class="media-body mb-5 text-white">
-                        <h4 class="mt-0 mb-0">Manuella Tarly</h4>
-                        <p class="small mb-4"> <i class="fa fa-map-marker mr-2"></i>San Farcisco</p>
+                    <div class="profile mr-3"><img src="{% static 'images/aquaagoralogo.png' %}" alt="{% static 'images/aquaagoralogo.png' %}" height="60" class="rounded mb-2 img-thumbnail">
+                    </div>
+                    <div class="media-body mb-0 text-white">
+                        <h4 class="mt-0 mb-0">{{ user.username }}</h4>
+                        <p class="small mb-4"> <i class=""></i>Joined: {{ user.date_joined }}<br>Email: {{ user.email }}</p>
+                        <form action="{% url 'profile_edit' user.id %}" method="POST">
+                            {% csrf_token %}
+                            {{ form.as_p }}
+                                <button type="button" class="btn btn-dark btn-sm btn-block" style="width:90%">
+                                    <input class="btn btn-sm text-white text-left" type="submit" value="Edit Profile">
+                                </button>
+                                <button type="button" class="btn btn-danger text-white btn-block mr-2" style="width: 90%;"><div class="card-action">
+                                    <a class="text-white" onclick="return confirm('Are you sure you want to delete your account?')" href="{% url 'profile_delete' user.id %}">Delete</a>
+                                </div>
+                                </button>
+                            
+                        </form>
                     </div>
                 </div>
             </div>
-
-            <div class="bg-light p-4 d-flex justify-content-end text-center">
-                <ul class="list-inline mb-0">
-                    <li class="list-inline-item">
-                        <h5 class="font-weight-bold mb-0 d-block">241</h5><small class="text-muted"> <i class="fa fa-picture-o mr-1"></i>Photos</small>
-                    </li>
-                    <li class="list-inline-item">
-                        <h5 class="font-weight-bold mb-0 d-block">84K</h5><small class="text-muted"> <i class="fa fa-user-circle-o mr-1"></i>Followers</small>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="py-4 px-4">
-                <div class="d-flex align-items-center justify-content-between mb-3">
-                    <h5 class="mb-0">Recent photos</h5><a href="#" class="btn btn-link text-muted">Show all</a>
-                </div>
-                <div class="row">
-                    <div class="col-lg-6 mb-2 pr-lg-1"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556294928/nicole-honeywill-546848-unsplash_ymprvp.jpg" alt="" class="img-fluid rounded shadow-sm"></div>
-                    <div class="col-lg-6 mb-2 pl-lg-1"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556294927/dose-juice-1184444-unsplash_bmbutn.jpg" alt="" class="img-fluid rounded shadow-sm"></div>
-                    <div class="col-lg-6 pr-lg-1 mb-2"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556294926/cody-davis-253925-unsplash_hsetv7.jpg" alt="" class="img-fluid rounded shadow-sm"></div>
-                    <div class="col-lg-6 pl-lg-1"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556294928/tim-foster-734470-unsplash_xqde00.jpg" alt="" class="img-fluid rounded shadow-sm"></div>
-                </div>
                 <div class="py-4">
                     <h5 class="mb-3">Recent posts</h5>
-                    <div class="p-4 bg-light rounded shadow-sm">
-                        <p class="font-italic mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-                        <ul class="list-inline small text-muted mt-3 mb-0">
-                            <li class="list-inline-item"><i class="fa fa-comment-o mr-2"></i>12 Comments</li>
-                            <li class="list-inline-item"><i class="fa fa-heart-o mr-2"></i>200 Likes</li>
-                        </ul>
+                    {% for post in posts %}
+            <div class="card mt-3">
+                <div class="row no-gutters">
+                    <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ post.title }}</h5>
+                        <h5 class="card-title">{{ post.content }}</h5>
+                        <p class="card-text"><small class="text-muted">{{ post.created_at }}</small></p>
+                        <a href="{% url 'posts_detail' post.id %}" class="btn btn-dark btn-sm">Detail</a>
                     </div>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
                 </div>
             </div>
         </div><!-- End profile widget -->
 
     </div>
 </div>
-<div class="container mt-5">
-    <h4>Welcome </h4>
-    <div class='row bg-dark text-black pt-5 pb-5 px-2'>
-    <div class="col-3">
-        <div class="card" style="width: 18rem;">
-            <div class="card-body">
-                <h5 class="card-title">{{ user.username }}</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Joined: {{ user.date_joined }}</h6>
-            </div>
-            <div class="card-footer">
-            <form action="{% url 'profile_edit' user.id %}" method="POST">
-                {% csrf_token %}
-                {{ form.as_p }}
-                    <button type="button" class="btn btn-primary btn-block" style="width:90%">
-                        <input class="btn btn-sm text-white text-left" type="submit" value="Update Profile">
-                    </button>
-                    <button type="button" class="btn btn-danger text-white btn-block mr-2" style="width: 90%;"><div class="card-action">
-                        <a class="text-white" onclick="return confirm('Are you sure you want to delete your account?')" href="{% url 'profile_delete' user.id %}">Delete</a>
-                    </div>
-                    </button>
-                
-            </form>
-            </div>
-        </div>
-    </div>
-    </div>
 </div>
 {% else %}
 <div class="container mt-5">
