--- a/main_app/static/styles/main.css
+++ b/main_app/static/styles/main.css
@@ -70,4 +70,12 @@ footer {
   background-color: rgb(3, 15, 71) !important;
 }
 
+.bg-dark-dark {
+  background-color: rgb(3, 15, 71, 0.25) !important;
+  border-width: 5px !important;
+  border-style: solid !important;
+  border-radius: 15px;
+
+}
+
   
