--- a/main_app/templates/profile/profile.html
+++ b/main_app/templates/profile/profile.html
@@ -4,14 +4,19 @@
 {% if user.is_authenticated %}
 
 
-<div class="row py-5 px-4">
-    <div class="col-xl-4 col-md-6 col-sm-10 mx-auto">
+
+
+
+
+<div class="row py-5 px-5">
+    
+    <div class="col-xl-4 col-md-6 col-sm-10 mx-auto ">
 
         <!-- Profile widget -->
         <div class="bg-white shadow rounded overflow-hidden">
             <div class="px-4 pt-0 pb-4 bg-dark"><br>
                 <div class="media align-items-end profile-header">
-                    <div class="profile mr-3"><img src="{% static 'images/aquaagoralogo.png' %}" alt="{% static 'images/aquaagoralogo.png' %}" height="60" class="rounded mb-2 img-thumbnail">
+                    <div class="profile mr-3"><img src="{% static 'images/aquaagoralogo.png' %}" alt="{% static 'images/aquaagoralogo.png' %}" height="60" class="img-fluid bg-dark">
                     </div>
                     <div class="media-body mb-0 text-white">
                         <h4 class="mt-0 mb-0">{{ user.username }}</h4>
@@ -22,7 +27,7 @@
                                 <button type="button" class="btn btn-dark btn-sm btn-block" style="width:90%">
                                     <input class="btn btn-sm text-white text-left" type="submit" value="Edit Profile">
                                 </button>
-                                <button type="button" class="btn btn-danger text-white btn-block mr-2" style="width: 90%;"><div class="card-action">
+                                <button type="button" class="btn btn-dark text-white btn-block mr-2" style="width: 90%;"><div class="card-action">
                                     <a class="text-white" onclick="return confirm('Are you sure you want to delete your account?')" href="{% url 'profile_delete' user.id %}">Delete</a>
                                 </div>
                                 </button>
@@ -31,16 +36,15 @@
                     </div>
                 </div>
             </div>
-                <div class="py-4">
-                    <h5 class="mb-3">Recent posts</h5>
+                <div class="py-10">
                     {% for post in posts %}
-            <div class="card mt-3">
+            <div class="card mt-6">
                 <div class="row no-gutters">
                     <div class="col-md-8">
                     <div class="card-body">
                         <h5 class="card-title">{{ post.title }}</h5>
                         <p class="card-text"><small class="text-muted">{{ post.created_at }}</small></p>
-                        <a href="{% url 'posts_detail' post.id %}" class="btn btn-danger btn-sm"></a>
+                        <a href="{% url 'posts_detail' post.id %}" class="btn btn-dark btn-sm">Go to post</a>
                     </div>
                     </div>
                 </div>
@@ -52,10 +56,19 @@
 
     </div>
 </div>
-
 {% else %}
+
+
+
+
+
+
+
 <div class="container mt-5">
     <h2>Please login to view your profile</h2>
 </div>
 {% endif %}
+
+
+
 {% endblock %}
