--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -1,17 +1,35 @@
 {% extends 'base.html' %} 
 {% load static %} 
 {% block content %}
-<div class="container mt-5">
-  <form class="form-signin" action="{% url 'login' %}" method="POST">
-    {% csrf_token %} 
-    <div class="text-center mb-4">
-      <img class="mb-4" src="{% static 'images/WayfarerLogo4.png' %}" alt="" width="72" height="72">
-      <h1 class="h3 mb-3 font-weight-normal">Please Login</h1>
-    </div>
-    {{form}}
-    <button type="submit" class="btn btn-danger" value="login" type="submit">Sign in</button>
-    <input type="hidden" name="next" value="{{ next }}" />
-  </form>
+
+<div class="video-background-holder">
+  <div class="video-background-overlay"></div>
+  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+      <source src="{% static 'images/fish_swimming_in_tank.mp4/' %}" type="video/mp4">
+  </video>
+  <div class="video-background-content container h-100">
+      <div class="d-inline-flex h-100 text-center align-items-center text-dark justify-content-center">
+          <div class="px-2  pb-5 bg-dark-dark">
+        <div class="container mt-5">
+          <form class="form-signin" action="{% url 'login' %}" method="POST">
+            {% csrf_token %} 
+            <div class="text-center mb-4">
+              <h1 class="h3 mb-3 font-weight-normal">Please Login</h1>
+            </div>
+            {{form}}
+            <br>
+            <br>
+            <button type="submit" class="btn btn-dark" value="login" type="submit">Sign in</button>
+            <input type="hidden" name="next" value="{{ next }}" />
+          </form>
+        </div> 
+        </div>
+      </div>
+  </div>
 </div>
+
 {% endblock %}
+
+
+
 
