adds styling to registration page

--- a/main_app/templates/activation_sent.html
+++ b/main_app/templates/activation_sent.html
@@ -1,1 +1,1 @@
-<h3>Activation link sent! Please check your console or mail.</h3>
+<h3>Activation link sent! Please check the email you registered with to create your profile and start posting!</h3>
