--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -34,7 +34,7 @@
           <img src="{% static 'images/aquaagoralogo.png' %}" width="40" alt="" class="d-inline-block align-middle mr-2">
           <!-- Logo Text -->
           <span class="text-uppercase font-weight-bold">Aqua Agora</span>
-          <span class='basemidhome' id='media'>The Fishkeeper's Forum</span>
+          <span class='basemidhome mobileshow' id='media'>The Fishkeeper's Forum</span>
         </a>
     
         <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"><span class="navbar-toggler-icon"></span></button>
