--- a/main_app/templates/profile/edit.html
+++ b/main_app/templates/profile/edit.html
@@ -1,19 +1,65 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<div class="container mt-4">
-  <h1 class="text-center">Update your profile</h1>
-  <div class="row">
-    <form class="form-signin" action="{% url 'profile_edit' user.id %}" method="POST">
-      {% csrf_token %}
-      {{ profile_user_form.as_p }}
-      {{ profile_form.as_p }}
-      <input class="btn btn-danger" type="submit" value="Update {{user.name }}">
-      {% if error_message %}
-      <p class="text-danger">{{ error_message }}</p>
-    {% endif %}
-    </form>
-  </div>
+{% if user.is_authenticated %}
+
+
+<div class="video-background-holder">
+    <div class="video-background-overlay"></div>
+    <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+        <source src="{% static 'images/fish_swimming_in_tank.mp4/' %}" type="video/mp4">
+    </video>
+    <div class="video-background-content container h-100">
+
+
+
+<div class="row py-5 px-5">
+    
+    <div class="col-xl-4 col-md-6 col-sm-10 mx-auto ">
+
+        <!-- Profile widget -->
+            <div class="px-4 pt-0 pb-4 bg-dark-dark"><br>
+             
+                  <h5 class="text-center text-white">Change Username/Email Below</h5>
+                
+                    <form class="form-signin text-white" action="{% url 'profile_edit' user.id %}" method="POST">
+                      {% csrf_token %}
+                      {{ profile_user_form.as_p }}
+                      {{ profile_form.as_p }}
+                      <input class="btn btn-dark text-white btn-block mr-2" type="submit" value="Update {{user.name }}">
+                      {% if error_message %}
+                      <p class="text-danger">{{ error_message }}</p>
+                    {% endif %}
+                    </form>
+            
+                  
+                     
+                    
+                </div>
+            </div>
+                
+                </div>
+            </div>
+        </div><!-- End profile widget -->
+
+    </div>
 </div>
+</div>
+</div>
+{% else %}
+
+
+
+
+
+
+
+<div class="container mt-5">
+    <h2>Please login to view your profile</h2>
+</div>
+{% endif %}
+
+
 
 {% endblock %}
+
