--- a/main_app/static/styles/main.css
+++ b/main_app/static/styles/main.css
@@ -78,8 +78,17 @@ footer {
 
 }
 
-.mobileshow {
-  display: none;
+
+#content-desktop {display: block;}
+#content-mobile {display: none;}
+
+@media screen and (max-width: 768px) {
+
+#content-desktop {display: none;}
+#content-mobile {display: block;}
+
 }
+
+
 
   
