--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -28,7 +28,7 @@
   </head>
   <body class="d-flex flex-column h-100">
     <nav class="navbar navbar-expand-lg py-3 navbar-dark bg-dark shadow-sm sticky-top">
-      <div class="container">
+      <div class="container text-right">
         <div id="content-desktop"><a href="/ " class="navbar-brand">
           <!-- Logo Image -->
           <img src="{% static 'images/aquaagoralogo.png' %}" width="40" alt="" class="d-inline-block align-middle mr-2">
